--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
               <a class="nav-link" href="{% url 'project_index' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="/blog">Blogs</a>
             </li>
           </ul>
         </div>
