new feature blog create, login logout

--- a/templates/blog_index.html
+++ b/templates/blog_index.html
@@ -1,18 +1,27 @@
 {% extends "base.html" %}
 {% block page_content %}
+<div>
+    <div>
+        {% if user.is_authenticated %}
+            <a class="nav-link small" href="{%url 'blog_create' %}">Create New Blog</a>
+        {% endif %}
+    </div>
+
+
+</div>
 <div class="col-md-8 offset-md-2">
-    <h1>Blog Index</h1>
+<!--    <h1>Blog Index</h1>-->
     <hr>
     {% for post in posts %}
     <h2><a href="{% url 'blog_detail' post.pk%}">{{ post.title }}</a></h2>
     <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'blog_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
-        {% endfor %}
+        {{ post.author }} | {{ post.created_on.date }}
+<!--        Categories:&nbsp;-->
+<!--        {% for category in post.categories.all %}-->
+<!--        <a href="{% url 'blog_category' category.name %}">-->
+<!--            {{ category.name }}-->
+<!--        </a>&nbsp;-->
+<!--        {% endfor %}-->
     </small>
     <p>{{ post.body | slice:":400" }}...</p>
     {% endfor %}
