--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,21 @@
             <li class="nav-item">
               <a class="nav-link" href="/blog">Blogs</a>
             </li>
+<!--            {% if user.is_authenticated %}-->
+<!--                <li class="nav-item">-->
+<!--                  <a class="nav-link" href="{%url 'blog_create' %}">Create New Blog</a>-->
+<!--                </li>-->
+<!--            {% endif %}-->
+              <li class="nav-item">
+
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </li>
+
+
           </ul>
         </div>
     </div>
