--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -3,13 +3,13 @@
 <div class="col-md-8 offset-md-2">
     <h1>{{ post.title }}</h1>
     <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'blog_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
-        {% endfor %}
+        Author: {{post.author}} | Create On: {{ post.created_on.date }} |&nbsp; Last Modified: {{post.last_modified.date}}
+<!--        Categories:&nbsp;-->
+<!--        {% for category in post.categories.all %}-->
+<!--        <a href="{% url 'blog_category' category.name %}">-->
+<!--            {{ category.name }}-->
+<!--        </a>&nbsp;-->
+<!--        {% endfor %}-->
     </small>
     <p>{{ post.body | linebreaks }}</p>
     <h3>Leave a comment:</h3>
